# local-execution-iceberg-tables

./: .gitignore  README.md  pyproject.toml
app/: iceberg_utils.py  windmill_app.py
test/: test_app.py
